[tool.poetry]
name = "joyfuljudiciousconditions"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "3.0.2"
selenium = "4.17.2"
html2text = "2024.2.26"
fastapi = "0.111.0"
uvicorn = "0.29.0"
selenium-wire = "^5.1.0"
webdriver-manager = "^4.0.1"
beautifulsoup4 = "^4.12.3"
readability = "0.3.1"
readability-lxml = "0.8.1"
lxml-html-clean = "0.1.1"
groq = "0.8.0"
requests = "^2.32.2"
openai = "^1.30.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
